# Abacus

./: CMakeLists.txt  README.md
include/: Matrix.h
src-amd64/: Matrix.cpp
src-arm64/: Matrix.cpp
src-opencl/: Accelerator.cpp  Accelerator.h  Matrix.cpp  kernel.cl
test/: CMakeLists.txt  main.cpp
